--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 colin_felton_ltd_ios_distribution.cer
 colin_felton_ltd_ios_distribution.p12
+Sika Ireland.ipa
+Info.plist
+PkgInfo
+CodeResources
+embedded.mobileprovision
+iTunesArtwork
+icon~ipad.png
+icon~ipad@2x.png
+stbuild_template
